# Sandwich

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: pack_as_char_array.cmake  ucm.cmake
core/: CMakeLists.txt
core/src/: core.cpp
core/src/math/: vector.hpp
core/src/sw/: core.cpp  core.hpp  intrusive_pointer_manager.hpp  js_module.hpp  object_wrap.hpp  scene.cpp  scene.hpp  scene_node.cpp  scene_node.hpp  sprite.cpp  sprite.hpp  sw_macros.hpp
core/src/sw/bindings/: math.hpp  renderer.hpp
core/src/sw/core/: intrusive_pointer_manager.hpp  sw_macros.hpp
core/src/sw/math/: matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
core/src/sw/modules/: math.cpp  math.hpp
core/src/sw/renderer/: gl.hpp  renderer.cpp  renderer.hpp  screen.cpp  screen.hpp  shader.cpp  shader.hpp  sprite_batch.cpp  sprite_batch.hpp  texture.cpp  texture.hpp  texture_data.cpp  texture_data.hpp  texture_region.cpp  texture_region.hpp  texture_unit_manager.cpp  texture_unit_manager.h
core/src/sw/test/: operator.hpp  sci_calculator.hpp  std_calculator.cpp  std_calculator.hpp
glslcross/: CMakeLists.txt
glslcross/include/: glslcross.h
glslcross/src/: main.cpp
js/: main.js  module.js
math/: CMakeLists.txt
math/src/: matrix.cpp  matrix.hpp
math/src/sw/: matrix.hpp  vector.cpp
math/src/sw/math/: matrix.hpp  vector.cpp  vector.hpp
platform/common/: CMakeLists.txt
platform/common/src/: gl.hpp
platform/desktop/: CMakeLists.txt
platform/desktop/cmake/: ucm.cmake
platform/desktop/src/: main.cpp
renderer/: CMakeLists.txt
renderer/src/sw/: renderer.hpp  shader.cpp  shader.hpp  sprite_batch.cpp  sprite_batch.hpp  texture.cpp  texture.hpp  texture_data.cpp  texture_data.hpp  texture_region.cpp  texture_region.hpp
src/: main.cpp  object_wrap.hpp  sw_macros.hpp
src/math/: vector.cpp
tools/: build_v8.js  pack_file.js  v8_build.py  v8_config.gn  v8_config_debug.gn  v8_config_release.gn
tools/node/: CMakeLists.txt  package.cmake  package.json
tools/v8_build_config/: x64.debug.gn  x64.release.gn  x64_debug.gn
usr/: CMakeLists.txt  package.json  tsconfig.json  webpack.config.js
usr/src/: main.ts  module.ts  sandwich.ts
