is_debug = true
target_cpu = "x64"
is_component_build = false
v8_static_library = true
v8_use_external_startup_data = false
v8_monolithic = true
v8_enable_debugging_features = true
enable_profiling = false
v8_enable_i18n_support = false
v8_enable_disassembler = false
v8_use_snapshot = false
v8_enable_gdbjit = false
v8_enable_handle_zapping = false
symbol_level = 2
is_clang = false